--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "concurrently": "^7.4.0",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "react-player": "^2.11.0"
   }
 }
