--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^7.4.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "react-player": "^2.11.0"
   }
